    to group library by; Genre, Artist, or Album
 3. When sorting artists and albums, if there is no sort tag then remove any
    periods from the main tag before using it to sort. e.g. A.S.A.P. -> ASAP
 4. Use SQLite for Jamendo and Magnatune libraries.
 5. Rename Online view to Internet.
 6. Place Streams view within Internet.
.....

 1. If connected to MPD>=0.19 using address 127.0.0.1 or localhost, then pass
    local files as 'file://' URLS.
 2. Ignore "The" when sorting albums.
 3. In Artists view, place "Various Artists" in alphabetical position - this is
    consistent with albums view.
 4. Use regular artist icon for "Various Artists"
 5. If MPD does not support 'sticker' command, then inform user that ratings
    cannot be stored.
 6. Add option to set MPD top-level path. Only tracks that are under this path
    will be used to populate artist and album listings. This is mainly of use
    when MPD is configured to use a UPnP backend.
 7. Use lsinfo, and not listallinfo, to populate artists and albums by default.
    Set alwaysUseLsInfo=false in Cantata's config file to disable this.
 8. Add 'Copy To Device' to playqueue.
 9. Do not reset current song when shuffling albums, or sorting playqueue.
10. MPD 0.19.2 can handle m3u8, so pass stream URLs of this type straight to
    MPD.
11. Re-add hack to force scrollbars in large combo popups and to restrict their
    height. This should apply to all Linux Gtk-like styles, not just QGtkStyle.
12. Use '#' for track number column title in table view.
13. Allow setting of column alignments in table views.
14. Add 'setCollection' to Cantata's DBUS interface.
15. Add 'Collections' and 'Outputs' menus to system tray menu (Linux and
    Windows builds only)
16. Separate title and track number in search model table view.
17. Show rating in search model table view.
18. Rename mpd source folder to mpd-interface to help build errors when
    libmpdclient(?) is also installed.