@@ -110,13 +110,6 @@
              </widget>
             </item>
             <item row="3" column="0" colspan="2">
-             <widget class="QCheckBox" name="sbMonoIcons">
-              <property name="text">
-               <string>Use monochrome icons</string>
-              </property>
-             </widget>
-             </item>
-            <item row="4" column="0" colspan="2">
              <widget class="QCheckBox" name="sbAutoHide">
               <property name="text">
                <string>Auto-hide</string>
